main.tf
resource "aws_vpc" "tfb" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = "${var.enable_dns_hostnames}"
  enable_dns_support   = "${var.enable_dns_support}"

  tags {
    Name = "${var.name}"
  }
}

resource "aws_internet_gateway" "tfb" {
  vpc_id = "${aws_vpc.tfb.id}"

  tags {
    Name = "${var.name}-igw"
  }
}

resource "aws_route" "internet_access" {
  route_table_id         = "${aws_vpc.tfb.main_route_table_id}"
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = "${aws_internet_gateway.tfb.id}"
}

resource "aws_subnet" "public" {
  vpc_id     = "${aws_vpc.tfb.id}"
  cidr_block = "${var.public_subnet}"

  tags {
    Name = "${var.name}-public"
  }
}
